--- a/style.css
+++ b/style.css
@@ -21,8 +21,10 @@
 }
 body{
       margin:  auto;
-    max-width: 1472px;
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     height: 100vh;
     font-size: 1.125rem;
     font-family: 'Space Grotesk', sans-serif;
