--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Space+Grotesk:wght@500&display=swap');
+(@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Space+Grotesk:wght@500&display=swap');
 :root{
     /*### Primary*/
 
@@ -36,9 +36,7 @@ body{
     align-items: center;
 }
 
-.container{
-   transform: translateX(30%);
-}
+
 .bg-main-desktop{
     max-width: 20rem;
     padding-left: 0;
@@ -213,7 +211,7 @@ align-items: baseline;
       .wrapper{
          
           flex-direction: column;
-         
+         justify-content:space-around;
     
       }
       .container{
