--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body{
 }
 .wrapper{
     display: flex;
-    justify-content: space-between;
+    justify-content:center;
     align-items: center;
 }
 
