--- a/style.css
+++ b/style.css
@@ -22,8 +22,7 @@
 body{
       margin:  auto;
     max-width: 1440px;
-    width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -32,20 +31,20 @@ body{
     font-family: 'Space Grotesk', sans-serif;
 }
 .wrapper{
-    display:flex;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .container{
-   margin: 0 auto;
    transform: translateX(30%);
 }
 .bg-main-desktop{
     max-width: 20rem;
     padding-left: 0;
-    width: 100%;
+    height: 100%;
     position: absolute;
     left: 0;
-    
 }
 .bg-main-mobile{
     display:none;
@@ -59,10 +58,12 @@ body{
     z-index: 100;
 }
 .card-container{
+    height: 100vh;
    color: var(--white);
    letter-spacing: 0.15rem;
    font-size: 1.125rem;
-   margin-right: 10rem;
+   margin-left: auto;
+   
 }
 .bg-card-front,.bg-card-back{
   max-width: 17.5rem;
@@ -71,24 +72,24 @@ body{
 .bg-card-front{
     position: absolute;
     left: 13%;
-    top:50%;
+    top:30%;
 }
 .card-logo{
     width: 3rem;
     position: absolute;
     left: 15%;
-    top: 51%;
+    top: 33%;
 }
  .card-number-img{
     position: absolute;
    left: 15%;
-    top: 54.5%;
+    top: 43%;
 }
 .cardholder-exp-img{
     display: flex;
    gap: 1.2rem;
     position: absolute;
-    top:56.5%;
+    top:48%;
     left: 15%;
     font-size: 0.6rem;
     text-transform: uppercase;
@@ -103,8 +104,8 @@ body{
 .cvc-img{
     font-size: 0.8rem;
     position: absolute;
-    left: 40%;
-    top: 63.7%;
+    left: 34.5%;
+    top: 70.7%;
 }
 label{
     font-size: 0.6rem;
