--- a/style.css
+++ b/style.css
@@ -35,7 +35,10 @@ body{
     justify-content: space-between;
     align-items: center;
 }
-
+.container{
+   margin: 0 auto;
+   transform: translateX(30%);
+}
 .bg-main-desktop{
     max-width: 20rem;
     padding-left: 0;
